--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -18,3 +18,15 @@ jobs:
       with:
         name: hello-artifact
         path: hello.txt
+
+  download:
+    runs-on: ubuntu-latest
+    steps:
+    - name: download text file
+      uses: actions/download-artifact@v4
+      with:
+        name: hello-artifact
+        path: ./artifects/hello.txt
+    - name: display content
+      run: cat ./artifacts/hello.txt
+    
