--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -26,7 +26,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: hello-artifact
-        path: ./artifects/hello.txt
+        path: ./artifects/
     - name: display content
       run: cat ./artifacts/hello.txt
     
