--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -26,6 +26,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: hello-artifact
+        path: hello.txt
     - name: display content
       run: cat ./artifacts/hello.txt
     
