--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -20,13 +20,14 @@ jobs:
         path: hello.txt
 
   download:
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - name: download text file
       uses: actions/download-artifact@v4
       with:
         name: hello-artifact
-        path: hello.txt
+        path: ./artifacts/hello.txt
     - name: display content
       run: cat ./artifacts/hello.txt
     
