--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -23,11 +23,10 @@ jobs:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - name: download text file
+    - name: Download text file
       uses: actions/download-artifact@v4
       with:
         name: hello-artifact
-        path: ./artifacts/
-    - name: display content
+        path: ./artifacts
+    - name: Display content of the text file
       run: cat ./artifacts/hello.txt
-    
